--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,8 @@ language: python
 cache: pip
 sudo: false
 
+# FIXME - ideally need to test on python 2
 python:
-  - "2.7"
   - "3.5"
   - "3.6"
   - "3.6-dev"
